muncher/programs/test-cases/error-3.mnc.stderr
error: method already defined
  --> test.mnc:3:13
  |
2 |     . hello {}
  |             - previous definition here
3 |     . hello {}
  |             ^ method already defined

