muncher/programs/test-cases/error-3.mnc
let a = object A {
    . hello {}
    . hello {}
};
